<resources>
    <string name="app_name">finance</string>
    <string name="text_save_transaction">save transaction</string>
    <string name="text_ui_mode">ui mode</string>
    <string name="text_total_income">total income</string>
    <string name="text_total_expense">total expense</string>
    <string name="text_total_balance">total balance</string>
    <string name="text_recent_transactions">recent transactions</string>
    <string name="text_view_all">view all</string>
    <string name="text_expense_when">when</string>
    <string name="text_expense_amount">amount</string>
    <string name="text_expense_transaction_type">transaction type</string>
    <string name="text_expense_tag">tag</string>
    <string name="text_expense_note">note</string>
    <string name="text_expense_add_transaction">save transaction</string>
    <string name="text_expense_rupees">₹</string>
    <string name="success_expense_saved">transaction saved successfully</string>
    <string name="success_transaction_delete">transaction deleted successfully!</string>
    <string name="text_title">title</string>
    <string name="text_about">about</string>
    <string name="text_filter">filter</string>
    <string name="text_edit">edit</string>
    <string name="text_createdAt">created at</string>
    <string name="text_add_expense">add expense</string>
    <string name="text_select_type">select type</string>
    <string name="text_description">description</string>
    <string name="text_date">date</string>
    <string name="text_category">category</string>
    <string name="text_all_income">all income</string>
    <string name="text_expense">expense</string>

    <!--  Share -->
    <string name="success_transaction_export">Transaction exported successfully!</string>
    <string name="failed_transaction_export">Transaction exported failed ☹️</string>
    <string name="text_error">Transaction exported failed ☹️</string>
    <string name="support_pending">Support for export on Android10+ is still in progress, kindly be patient and thanks for support!</string>
    <string name="text_open">Open</string>

    <!--  About -->
    <string name="text_about_license_title"><![CDATA[Attributions & License]]></string>
    <string name="text_about_license">Licensed Under Apache 2.0 License</string>
    <string name="text_about_visit_title">Visit</string>
    <string name="text_about_visit_url"><u>https://github.com/Spikeysanju/Expenso</u></string>
    <string name="text_app_version">v%s (%d)</string>
    <string name="text_share_as_text">Share as Text</string>
    <string name="text_share_as_image">Share as Image</string>
    <string name="text_delete">Delete</string>
    <string name="text_share">Share</string>

    <!-- share transaction -->
    <string name="share_message">\%s \nAmount: %s, \nTransaction-Type: %s, \nTag: %s, \nDate: %s, \nNote: %s, \nCreatedAt: %s \n\nVisit: https://github.com/Spikeysanju/Expenso</string>
    <string name="text_transaction_empty_title">No Transaction Yet!</string>
    <string name="text_transaction_empty_desc">After your first transaction you will be able to view it here</string>
    <string name="text_export_csv">Export to CSV</string>
    <string name="text_add_transaction">Add Transaction</string>
    <string name="text_undo">Undo</string>
    <string name="text_error_occurred">Error occurred!</string>
    <string name="text_add_split">add split</string>
    <string name="text_add_expenses">add expenses</string>
    <string name="text_all_expenses">all expenses</string>
    <string name="text_all_transactions">all transactions</string>

    <string-array name="types">
        <item>overall</item>
        <item>income</item>
        <item>expense</item>
    </string-array>

    <string-array name="categories">
        <item>all</item>
        <item>housing</item>
        <item>transportation</item>
        <item>food</item>
        <item>utilities</item>
        <item>insurance</item>
        <item>healthcare</item>
        <item> saving &amp; debts</item>
        <item>personal spending</item>
        <item>entertainment</item>
        <item>miscellaneous</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_friends">friends</string>
    <string name="text_view_all_transaction"><![CDATA[view all transaction >]]></string>
    <string name="text_enter_search">enter search</string>
    <string name="text_update_expense">update expense</string>
    <string name="text_delete_expense">delete expense</string>
    <string name="text_splash_screen_logo">splash_screen_logo</string>
</resources>
