<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/expenses_fragment_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/text_expense"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <androidx.cardview.widget.CardView
                android:id="@+id/add_expense_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:backgroundTint="@color/surface"
                android:text="@string/text_add_expenses"
                android:minWidth="120dp"
                app:cardCornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/open_sans_regular"
                    android:padding="15dp"
                    android:text="@string/text_add_expense"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>


        <androidx.core.widget.NestedScrollView
            android:id="@+id/expenses_fragment_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:animateLayoutChanges="true"
            app:layout_constraintTop_toBottomOf="@id/expenses_fragment_header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/dashboard_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <include
                    android:id="@+id/total_balance_card_view"
                    layout="@layout/card_total_balance"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/expense_income_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/total_balance_card_view">

                    <include
                        android:id="@+id/total_income_card_view"
                        layout="@layout/card_income"
                        android:layout_width="0dp"
                        android:layout_height="140dp"
                        android:layout_weight="1"
                        tools:layout_editor_absoluteX="11dp"
                        tools:layout_editor_absoluteY="215dp" />

                    <Space
                        android:id="@+id/expense_income_layout_spacer"
                        android:layout_width="16dp"
                        android:layout_height="match_parent" />

                    <include
                        android:id="@+id/total_expense_card_view"
                        layout="@layout/card_expense"
                        android:layout_width="0dp"
                        android:layout_height="140dp"
                        android:layout_weight="1"
                        tools:layout_editor_absoluteX="11dp"
                        tools:layout_editor_absoluteY="215dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/view_all_transactions"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/text_view_all_transaction"
                    android:textSize="14sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="@id/type_selector"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/type_selector" />

                <Spinner
                    android:id="@+id/type_selector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/expense_income_layout" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/expenses_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_all_transactions"
                    tools:listitem="@layout/rv_expense_item" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/expenses_recycler_view" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/expenses_fragment_empty_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/empty_state_anim"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="160dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/empty_layout_lottie" />

            <TextView
                android:id="@+id/empty_state_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center_horizontal"
                android:text="@string/text_transaction_empty_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/empty_state_anim" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>